html skeleton and some formatting complete

--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>TOPwebpage</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landing Page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <div class="first">
-            <div class="header">
-                <div class="logo">Header Logo</div>
-                    <ul class="links"> 
-                        <li><a>header link one</a></li>
-                        <li><a>header link two</a></li>
-                        <li><a>header link three</a></li>
-                    </ul>
-            </div>
-            <div class="content">
-                <div class="hero">
-                    <div class="hero-main">This website is awesome</div>
-                    <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                    <button class="signup">Sign up</button>
-                </div>
-                <img>
-            </div>
-        </div>
-        <div class="second">
-            <div class="content"></div>
-        </div>
-        <div class="third"></div>
-        <div class="fourth">
-          <div class="content">
-            <span class="quote">Quote</span>
-          </div>
-        </div>
+  <div class="one">
+    <div class="header">
+      <span class="header-logo">Header Logo</span>
+      <div class="header-links">
+        <span>header link one</span>
+        <span>header link two</span>
+        <span>header link three</span>
+      </div>
     </div>
-    <div class="footer"></div>
+    <div class="hero">
+      <div class="hero-content">
+        <span class="hero-main">This website is awesome</span>
+        <span class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the colour is a lower contrast</span>
+        <div><button class="hero-button">Sign up</button></div>
+      </div>
+      <div class="hero-image"></div>
+    </div>
+  </div>
+  <div class="two">
+    <div class="info">
+      <span class="info-main">Some random information</span>
+      <div class="info-figs">
+        <div class="info-fig">
+          <div class="info-img"></div>
+          <p class="info-subtext">this is some subtext under an image or illustration</p>
+        </div>
+        <div class="info-fig">
+          <div class="info-img"></div>
+          <p class="info-subtext">this is some subtext under an image or illustration</p>
+        </div>
+        <div class="info-fig">
+          <div class="info-img"></div>
+          <p class="info-subtext">this is some subtext under an image or illustration</p>
+        </div>
+        <div class="info-fig">
+          <div class="info-img"></div>
+          <p class="info-subtext">this is some subtext under an image or illustration</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="three">
+    <span class="quote-main">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up sapce, or maybe people will actually read it. Who knows? All I know is that it looks nice.</span>
+    <span class="quote-subtext">-Thor, God of Thunder</span>
+  </div>
+  <div class="four">
+    <div class="action">
+      <div class="action-content">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <div><button class="action-button">Sign up</button></div>
+    </div>
+    <div class="footer">
+      <p>Copyright The Odin Project 2021</p>
+    </div>
+
 </body>
+
 </html>
